# InkForge

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEMO_SUMMARY.md  LICENSE  README.md  ai-tools.html  demo.py  demo_complete.py  prd.txt  pyproject.toml  test_ai_service.py  test_api_direct.py  test_basic.py  test_cli_env.py  test_env.py  test_full_flow.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/inkforge/: __init__.py  cli.py
src/inkforge/core/: __init__.py  ai_service.py  config.py  generator.py
src/inkforge/models/: __init__.py  content.py
src/inkforge/processors/: __init__.py  engagement_optimizer.py  humanizer.py  platform_optimizer.py
src/inkforge/templates/: __init__.py  prompt_manager.py
src/inkforge/templates/prompts/: base_chinese.j2  base_english.j2  goal_engagement.j2  industry_finance.j2  industry_general.j2  mappings.json  platform_medium.j2  platform_zhihu.j2  tone_casual.j2  tone_professional.j2
src/inkforge/utils/: __init__.py  formatters.py
tests/: __init__.py  conftest.py  test_config.py  test_formatters.py  test_integration.py  test_models.py
